fixed home spacing divs

--- a/_sass/includes/_postbar.scss
+++ b/_sass/includes/_postbar.scss
@@ -1,7 +1,7 @@
 .box-nav-bar {
-  width: 19%;
+  width: 10%;
   margin-top: 25px;
-  margin-left: -10%;
+  // margin-left: -10%;
   margin-right: 6%;
   margin-bottom: 100%;
   padding-top: 15px;
